# XCStrings-to-Docx

./: .gitignore  Cargo.toml  Readme.md  build_fat_macos_lib.sh
.run/: Build far macos lib.run.xml  Build fat macos lib.run.xml
resources/: reader_test_base.xcstrings  reader_test_base_nl.docx  reader_test_base_pl.docx  reader_test_updated.xcstrings  reader_test_updated_nl.docx  reader_test_updated_pl.docx
src/: android_xml_writer.rs  config.rs  docx_metadata.rs  docx_reader.rs  docx_writer.rs  error.rs  extension_determiner.rs  lib.rs  main.rs
src/android_xml_writer/: config.rs  convert.rs
src/docx_metadata/: config.rs  read.rs
src/docx_reader/: config.rs  convert.rs  docx_extractor.rs
src/docx_writer/: config.rs  convert.rs
src/xcstrings_docx_merger/: config.rs  convert.rs  docx_extractor.rs
src/xcstrings_metadata/: config.rs  read.rs
